osprey_worker/src/osprey/engine/query_language/tests/test_parse_query_to_validated_ast/test_validates_names_suggests_valid_name.txt
error: unknown identifier
--> main.sml:1:8
     |
   1 | Query = UserNaem == 'jake'
     |         ^ unknown name `UserNaem`, did you mean `UserName`?
